feat: Include notification into polling (#15)
* feat: include notification into polling

* refactor: Kiss (my ass) - No Events

* fix: adjust response handling according to agent

* fix: adjustments according review

---------

Co-authored-by: Benjamin Clauss <benjamin.clauss@novatec-gmbh.de>